suidum day 6 + adding Jenkins

--- a/configuration.properties
+++ b/configuration.properties
@@ -13,3 +13,17 @@ timeouts=10
 docuportDBURL=jdbc:postgresql://35.222.62.70:5432/postgres
 docuportDBUserName=tstadmin
 docuportDBPassword=pamBam-Gagmon-85tmrw
+
+
+#API
+#DOCUPORT API base url
+docuport.base.url=https://beta.docuport.app
+client_username=b1g2_client@gmail.com
+client_password=Group2
+supervisor_username=b1g2_supervisor@gmail.com
+supervisor_password=Group2
+advisor_username=b1g2_advisor@gmail.com
+advisor_password=Group2
+employee_username=b1g2_employee@gmail.com
+employee_password=Group2
+docuport.global.password=Group2
