--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,6 @@
 browser=chrome
 #browser=firefox;
+#browser=remote-chrome-linux
 docuportBETA=https://beta.docuport.app/
 google.url=https://www.google.com
 loop.practice=https://loopcamp.vercel.app/
