--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,5 @@
-browser=chrome
+#browser=chrome
+browser=chrome-linux
 #browser=firefox;
 docuportBETA=https://beta.docuport.app/
 google.url=https://www.google.com
