new driver + pom + config

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,11 @@
 #browser=chrome
 browser=chrome-linux
-#browser=firefox;
+#browser=chrome-headless
+#browser=remote-chrome
+#browser=remote-firefox
 #browser=remote-chrome-linux
+#browser=remote-firefox-linux
+
 docuportBETA=https://beta.docuport.app/
 google.url=https://www.google.com
 loop.practice=https://loopcamp.vercel.app/
