--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Optional extra cucumber report plugin -->
         <dependency>
             <groupId>me.jvt.cucumber</groupId>
