--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.loop.test</groupId>
-    <artifactId>cucumber-project-B5</artifactId>
+    <artifactId>gaduation-proj</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
