--- a/pom.xml
+++ b/pom.xml
@@ -143,11 +143,13 @@
         <!-- RestAssured dependencies -->
 
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.9.0</version>
-            <scope>test</scope>
-        </dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+    </dependency>
+
+
 
         <dependency>
             <groupId>io.rest-assured</groupId>
