--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
-#browser=chrome
-browser=chrome-linux
+browser=chrome
+#browser=chrome-linux
 #browser=chrome-headless
 #browser=remote-chrome
 #browser=remote-firefox
